<resources>
    <string name="app_name">SmartCity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registar"><u>Registar</u></string>
    <string name="assunto">Assunto</string>
    <string name="abreviar_acontecimento">Abreviar acontecimento</string>
    <string name="rua">Rua</string>
    <string name="nome_da_rua">Nome da rua</string>
    <string name="localidade">Localidade</string>
    <string name="distrito_ou_cidade">Distrito ou Cidade</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="data">Data</string>
    <string name="observa_es">Observações</string>
    <string name="guardar">Guardar</string>
    <string name="rua_show">Rua:</string>
    <string name="localidade_show">Localidade:</string>
    <string name="cod_postal_show">Cod.Postal:</string>
    <string name="data_show">Data:</string>
    <string name="preencha_form_register">Preencha o form abaixo!</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_location">Add Location</string>
    <string name="subsmiss_es">List</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="permission_rationale_location" translatable="false">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied" translatable="false">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast" translatable="false">Location permission is required for this demo.</string>
    <string name="escolher_imagem">Escolher Imagem</string>
    <string name="notas">Notas</string>
</resources>
