<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/preencha_form_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editName"
        android:layout_below="@id/textDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/nome"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textName"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editName"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editName"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textemail"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editName"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editEmail"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPass"
        android:layout_alignStart="@+id/editName"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPassword"
        android:layout_alignStart="@+id/editPassword"
        android:layout_alignEnd="@id/editPassword"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_round"
        android:text="@string/registar" />

</RelativeLayout>