<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/assunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/assunto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <RelativeLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/assunto">

            <TextView
                android:id="@+id/morada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/rua_show"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


            <TextView
                android:id="@+id/localidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/localidade_show"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_below="@id/morada" />

            <TextView
                android:id="@+id/textCodPostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textLocalidade"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/data"
                android:layout_toEndOf="@id/codpostal" />

            <TextView
                android:id="@+id/textMorada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_toEndOf="@id/morada" />

            <TextView
                android:id="@+id/codpostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/cod_postal_show"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_below="@id/localidade"/>

            <TextView
                android:id="@+id/textLocalidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/localidade"
                android:layout_below="@id/textMorada"/>

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textLocalidade"
                android:layout_marginTop="8dp"
                android:text="@string/data_show"
                android:layout_marginStart="130dp"
                android:layout_toRightOf="@id/codpostal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/data"
                android:layout_below="@id/textLocalidade"/>

            <TextView
                android:id="@+id/observacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/observa_es"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
               android:layout_below="@id/codpostal" />

            <TextView
                android:id="@+id/textObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/observacoes"/>
        </RelativeLayout>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>