<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2Map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/assunto"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintBottom_toTopOf="@+id/editAssuntoMap"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editAssuntoMap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:hint="@string/abreviar_acontecimento"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView2Map"
                    app:layout_constraintTop_toBottomOf="@+id/textView2Map" />

                <TextView
                    android:id="@+id/textView6Map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/data"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="@+id/editAssuntoMap"
                    app:layout_constraintTop_toBottomOf="@+id/editAssuntoMap" />

                <EditText
                    android:id="@+id/editDataMap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:focusable="true"
                    android:inputType="date"
                    app:layout_constraintStart_toStartOf="@+id/textView6Map"
                    app:layout_constraintTop_toBottomOf="@+id/textView6Map" />

                <TextView
                    android:id="@+id/textView7Map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/observa_es"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="@+id/editDataMap"
                    app:layout_constraintTop_toBottomOf="@+id/editDataMap"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="360dp" />

                <EditText
                    android:id="@+id/editObsMap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView7Map"
                    app:layout_constraintTop_toBottomOf="@+id/textView7Map" />

                <Button
                    android:id="@+id/button2Map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_round"
                    android:text="@string/guardar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewMap" />

                <Button
                    android:id="@+id/button3Map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/escolher_imagem"
                    app:layout_constraintStart_toStartOf="@+id/editObsMap"
                    app:layout_constraintTop_toBottomOf="@+id/editObsMap" />

                <ImageView
                    android:id="@+id/imageViewMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3Map"
                    tools:srcCompat="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>