<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/assuntoMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/assunto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <RelativeLayout
            android:id="@+id/expandableLayoutMap"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_below="@id/assuntoMap">

            <TextView
                android:id="@+id/textLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toLeftOf="@id/Longitude"
                android:layout_toEndOf="@id/Latitude" />

            <TextView
                android:id="@+id/Latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Latitude:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/Longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Longitude:"
                android:layout_toRightOf="@id/textLat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/Longitude" />
            <TextView
                android:id="@+id/dataMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Latitude"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/data_show"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textDataMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/dataMap"
                android:layout_below="@id/Latitude"/>

            <TextView
                android:id="@+id/observacoesMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/observa_es"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
               android:layout_below="@id/dataMap" />

            <TextView
                android:id="@+id/textObsMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/observacoesMap"/>
        </RelativeLayout>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>